use shinyFiles package for file browser
..which makes it OS independent, hopefully..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ import(Rcpp)
 import(miniUI)
 import(rstudioapi)
 import(shiny)
+import(shinyFiles)
 importFrom(Rcpp,evalCpp)
 useDynLib(projBrowser)
