--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Project Browser Addin
 Version: 0.1.0
 Date: 2016-05-09
-Authors@R: person("Christoph", "Burow", role = c("aut", "cre"), email = "christoph.burow@uni-koeln.de")
-Maintainer: Christoph Burow <christoph.burow@uni-koeln.de>
+Authors@R: person("Christoph", "Burow", role = c("aut", "cre"), email = "christoph.burow@gmx.net")
+Maintainer: Christoph Burow <christoph.burow@gmx.net>
 Description: A simple browser for RStudio Projects.
 License: GPL-3
 Depends:
