update .gitignore & .Rbuildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,21 @@
+^Meta$
+^doc$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-LICENSE
+^\.travis\.yml$
+README\.md
+^\test\*
+^\.Rprofile$
+^appveyor\.yml$
+^cran-comments\.md$
+^packrat/
+packrat
+scripts/
+misc/
+dev/
+inst/extdata/misc/
+docs/
+_pkgdown.yml$
+/man/figures/
+README\.Rmd
+pkgdown/
